# tailmon

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/static/: index.html  script.js  style.css
