[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
dashmap = "5.5"
rust-embed = "8.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
common = { path = "../common" } 